# Our-World-OASIS-API-HoloNET-And-.NET-HDK

./: The OASIS.sln
NextGenSoftware.OASIS.API.Bridging/: IOASISBridge.cs
NextGenSoftware.OASIS.API.Core/Interfaces/: IOASISMapProvider.cs
NextGenSoftware.OASIS.API.Providers.RadixOASIS/radix-oasis/: Cargo.toml
NextGenSoftware.OASIS.API.Providers.RadixOASIS/radix-oasis/manifests/: instantiate.rtm  oasis_component_create.rtm
NextGenSoftware.OASIS.API.Providers.RadixOASIS/radix-oasis/src/: lib.rs  oasis_component.rs  oasis_nft.rs  oasis_token.rs
NextGenSoftware.OASIS.API.Providers.SOLANAOASIS/: NextGenSoftware.OASIS.API.Providers.SOLANAOASIS.csproj  SolanaBridge.cs
NextGenSoftware.OASIS.API.Providers.SOLANAOASIS.TestHarness/: NextGenSoftware.OASIS.API.Providers.SOLANAOASIS.TestHarness.csproj  Program.cs
