[package]
name = "radix-oasis"
version = "1.0.0"
edition = "2021"

[dependencies]
scrypto = { version = "1.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# [dependencies.uuid]
# version = "1.11.0"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "v7",
#     "js",
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]

[dev-dependencies]
scrypto-test = { version = "1.2.0" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace